import React from 'react'
import { CredentialCard } from 'src/ui/home/components/credentialCard'
import { shallow } from 'enzyme'

describe('ClaimCard component', () => {
  it('matches the snapshot on render', () => {
    const props = {
      credentialItem: {
        credentialType: 'Name',
        claimData: {
          familyName: 'Running',
        },
        id: 'claim:id:1234',
        issuer: 'did:issuer:ex',
        subject: 'did:subject: ex'
      },

      openClaimsDetails: () => null
    }
    const rendered = shallow(<CredentialCard {...props} />)
    expect(rendered).toMatchSnapshot()
  })

  it('matches the snapshot of a two line claim', () => {
    const props = {
      credentialItem: {
        credentialType: 'Name',
        claimData: {
          givenName: 'Test',
          familyName: 'Running'
        },
        id: 'claim:id:1234',
        issuer: 'did:issuer:ex',
        subject: 'did:subject: ex'
      },

      openClaimsDetails: () => null
    }

    const rendered = shallow(<CredentialCard {...props} />)
    expect(rendered).toMatchSnapshot()
  })

  it('call the handleInteraction function when pressed', () => {
    const props = {
      credentialItem: {
        credentialType: 'Name',
        claimData: {
          givenName: 'Test',
          familyName: 'Running'
        },
        id: 'claim:id:1234',
        issuer: 'did:issuer:ex',
        subject: 'did:subject: ex'
      },
      handleInteraction: jest.fn(),
      openClaimsDetails: () => null
    }

    const wrapper = shallow(<CredentialCard {...props} />)
    wrapper.find('ClaimCard').first().props().handlePressed()
    expect(props.handleInteraction).toHaveBeenCalled()

  })
})
